--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -19,7 +19,8 @@
                     <img src="{{ product.image.url }}" class="img-fluid" alt="{{ product.name }}">
                 </a>
                 {% else %}
-                <a href="{{ MEDIA_URL }}noimage.png" target="_blank" aria-label="Link to open default image in new page">
+                <a href="{{ MEDIA_URL }}noimage.png" target="_blank"
+                    aria-label="Link to open default image in new page">
                     <img src="{{ MEDIA_URL }}noimage.png" class="img-fluid" alt="{{ product.name }}">
                 </a>
                 {% endif %}
@@ -33,8 +34,8 @@
                 {% if request.user.is_superuser %}
                 <small>
                     <a href="{% url 'edit_product' product.id %}" aria-label="Link to edit product page">Edit</a>
-                    <a href="#deleteProduct" class="text-danger" data-bs-toggle="modal"
-                        data-bs-target="#deleteProduct" aria-label="Link to deletion confirmation modal">
+                    <a href="#deleteProduct" class="text-danger" data-bs-toggle="modal" data-bs-target="#deleteProduct"
+                        aria-label="Link to deletion confirmation modal">
                         Delete
                     </a>
                 </small>
@@ -125,8 +126,7 @@
                         {% elif product.category.name == 'kids_footwear' %}
                         <div class="col-sm-12 col-md-6">
                             <p>Size*</p>
-                            <select class="form-control form-select" name="product_size"
-                                id='id_kids_shoe_size'>
+                            <select class="form-control form-select" name="product_size" id='id_kids_shoe_size'>
                                 <option value="xs" selected>XS</option>
                                 <option value="s">S</option>
                                 <option value="m">M</option>
@@ -175,7 +175,8 @@
                         <!-- Action buttons -->
                         <div class="col-12 mt-4">
                             <input type="submit" class="btn btn-sm btn-blue basket-buttons" value="Add to basket">
-                            <a href="{% url 'products' %}" aria-label="Link to products page" class="btn btn-sm btn-grey basket-buttons">
+                            <a href="{% url 'products' %}" aria-label="Link to products page"
+                                class="btn btn-sm btn-grey basket-buttons">
                                 <span>Continue shopping</span>
                             </a>
                         </div>
@@ -199,18 +200,18 @@
                 <div class="table-responsive">
                     <table class="table">
                         <thead>
-                        <tr class="d-none d-md-table-row">
-                            <th scope="col">Date</th>
-                            <th scope="col">Username</th>
-                            <th scope="col">Review</th>
-                            <th scope="col"></th>
-                            <th scope="col"></th>
-                            <th scope="col"></th>
-                        </tr>
-                        <tr class="d-md-none">
-                            <th scope="col">Comment</th>
-                            <th scope="col"></th>
-                          </tr>
+                            <tr class="d-none d-md-table-row">
+                                <th scope="col">Date</th>
+                                <th scope="col">Username</th>
+                                <th scope="col">Review</th>
+                                <th scope="col"></th>
+                                <th scope="col"></th>
+                                <th scope="col"></th>
+                            </tr>
+                            <tr class="d-md-none">
+                                <th scope="col">Comment</th>
+                                <th scope="col"></th>
+                            </tr>
                         </thead>
                         <tbody>
                             {% for review in reviews %}
@@ -221,7 +222,8 @@
                                 <td class="icons">
                                     <!-- Allow user to edit own review -->
                                     {% if request.user == review.author %}
-                                    <a href="{% url 'edit_product_review' review.id %}" aria-label="Link to edit product review page">
+                                    <a href="{% url 'edit_product_review' review.id %}"
+                                        aria-label="Link to edit product review page">
                                         <i class="fa-solid fa-pen-to-square"></i>
                                     </a>
                                     {% endif %}
@@ -229,40 +231,42 @@
                                 <td class="icons">
                                     <!-- Allow superuser or user who left review to delete-->
                                     {% if request.user == review.author or request.user.is_superuser %}
-                                    <a href="#deleteComment" data-bs-toggle="modal" data-bs-target="#deleteComment"
-                                    aria-label="Link to deletion confirmation modal">
+                                    <a data-bs-toggle="modal" data-bs-target="#deleteReview" data-id="{{ review.id }}"
+                                        data-url="{% url 'delete_product_review' review.id %}"
+                                        aria-label="Link to deletion confirmation modal">
                                         <i class="fa-solid fa-trash-can"></i>
                                     </a>
-                                    <!-- Deletion confirmation Bootstrap modal -->
-                                    <div class="modal fade" id="deleteComment" tabindex="-1"
-                                        aria-labelledby="Delete comment confirmation modal" aria-hidden="true">
-                                        <div class="modal-dialog modal-dialog-centered">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                        aria-label="Close"></button>
-                                                </div>
-                                                <div class="modal-body">
-                                                    <p class="text-center">Are you sure you want to delete your review?</p>
-                                                </div>
-                                                <div class="modal-footer">
-                                                    <button type="button" class="btn btn-sm btn-grey"
-                                                        data-bs-dismiss="modal">Cancel</button>
-                                                    <a href="{% url 'delete_product_review' review.id %}" aria-label="Link to delete review">
-                                                        <button type="button" class="btn btn-sm btn-danger">Delete</button>
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
                                     {% endif %}
                                 </td>
                             </tr>
                             {% endfor %}
                         </tbody>
                     </table>
+                    <!-- Deletion confirmation Bootstrap modal -->
+                    <div class="modal fade" id="deleteReview" tabindex="-1"
+                        aria-labelledby="Delete comment confirmation modal" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <p class="text-center">Are you sure you want to delete this review? (ID:<span
+                                            id="reviewId"></span>)</p>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-sm btn-grey"
+                                        data-bs-dismiss="modal">Cancel</button>
+                                    <a href="" id="actualDeleteBtn" aria-label="Link to delete review">
+                                        <button type="button" class="btn btn-sm btn-danger">Delete</button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                 <!-- Review button displayed if user has not left previous review for this product -->
+                <!-- Review button displayed if user has not left previous review for this product -->
                 <div class="col-12 mt-4">
                     {% if not previous_review %}
                     {% if user.is_authenticated %}
@@ -304,6 +308,12 @@
             .done(function () {
                 location.reload();
             });
+    })
+
+    // Used from Stack Overflow, details in README
+    $('#deleteReview').on('shown.bs.modal', function (event) {
+        $("#reviewId").text($(event.relatedTarget).data('id'));
+        $("#actualDeleteBtn").attr('href', $(event.relatedTarget).data('url'));
     })
 </script>
 {% endblock %}
