Add favicon to base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="surf, wetsuit, surfboard">
     <meta name="author" content="Anya McDonald">
     <meta name="description" content="Surf shop selling high quality surfboards, equipment and wetsuits">
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon/favicon.ico' %}">
     {% endblock %}
 
     {% block corecss %}
