--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -7,7 +7,7 @@
 
 
 {% block inner_content %}
-<h1>{% trans "Confirm E-mail Address" %}</h1>
+<h2 class="text-center">{% trans "Confirm E-mail Address" %}</h2>
 
 {% if confirmation %}
 
