Remove button from anchor link

--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -27,8 +27,8 @@
                 {{ contact_form|crispy }}
                 <div class="text-center">
                     <button class="btn btn-blue" type="submit" >Send</button>
-                    <a href="{% url 'home' %}" aria-label="Link to go back to home page">
-                        <button class="btn btn-grey" type="button">Cancel</button>
+                    <a href="{% url 'home' %}" class="btn btn-grey" aria-label="Link to go back to home page">
+                        Cancel
                     </a>
                 </div>
             </form>
