Remove buttos from anchor links

--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -27,8 +27,8 @@
                 {{ form|crispy }}
                 <div class="text-center">
                     <button class="btn btn-blue" type="submit" >Create</button>
-                    <a href="{% url 'products' %}" aria-label="Link to products page">
-                        <button class="btn btn-grey" type="button">Cancel</button>
+                    <a href="{% url 'products' %}" class="btn btn-grey" aria-label="Link to products page">
+                        Cancel
                     </a>
                 </div>
             </form>
